# GraphicPlus

./: CMakeLists.txt
assets/: fragment-shader.glsl  vertex-shader.glsl
include/: buffer.hh  element-buffer.hh  programme.hh  util.hh  vertex-array.hh  window.hh
include/glad/: glad.h
src/: CMakeLists.txt  buffer.cc  element-buffer.cc  glad.c  main.cc  programme.cc  vertex-array.cc  window.cc
